--- a/index.html
+++ b/index.html
@@ -3,29 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Identificador de Órdenes por Voz con js</title>
+  <title>Control por Voz del Navegador</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  
+  <style>
+    #text {
+      font-size: 16px; /* Tamaño de letra inicial */
+      color: black; /* Color inicial del texto */
+    }
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">Mi Aplicación</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li  class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
   <div class="container mt-5">
-    <h1 class="text-center">Identificar Órdenes por Voz</h1>
+    <h1 class="text-center">Control por Voz del Navegador</h1>
+    <p id="text" class="text-center">Este es un texto de ejemplo.</p>
     <div id="result" class="text-center mt-3"></div>
     <button id="start-btn" class="btn btn-primary d-block mx-auto mt-3">Iniciar Reconocimiento de Voz</button>
   </div>
@@ -37,8 +27,5 @@
   </footer>
 
   <script src="script.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-class="nav-item active">
-            <a
