--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
     <h1 class="text-center">Control por Voz del Navegador</h1>
     <p id="text" class="text-center">Este es un texto de ejemplo.</p>
     <div id="result" class="text-center mt-3"></div>
-    <button id="start-btn" class="btn btn-primary d-block mx-auto mt-3">Iniciar Reconocimiento de Voz</button>
+    
+    <div class="mt-3">
+      <h2 class="text-center">Comandos de Voz:</h2>
+      <ul>
+        <li><strong>Aumentar Tamaño de Texto:</strong> "Aumentar tamaño"</li>
+        <li><strong>Disminuir Tamaño de Texto:</strong> "Disminuir tamaño"</li>
+        <li><strong>Cambiar Color del Texto a Rojo:</strong> "Cambiar color a rojo"</li>
+        <li><strong>Cambiar Color del Texto a Verde:</strong> "Cambiar color a verde"</li>
+        <li><strong>Cambiar Color del Texto a Azul:</strong> "Cambiar color a azul"</li>
+        <li><strong>Abrir una Pestaña Nueva:</strong> "Abrir una pestaña"</li>
+        <li><strong>Ir a una Página Específica:</strong> "Ir a [URL de la página]"</li>
+        <li><strong>Cerrar la Pestaña Actual:</strong> "Cerrar pestaña"</li>
+        <li><strong>Cerrar el Navegador:</strong> "Cerrar navegador"</li>
+        <li><strong>Maximizar Ventana del Navegador:</strong> "Maximizar ventana"</li>
+        <li><strong>Minimizar Ventana del Navegador:</strong> "Minimizar ventana"</li>
+      </ul>
+    </div>
   </div>
 
   <footer class="footer mt-auto py-3 bg-light">
